# clients

./: .gitignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
js/: README.md  package.json
js/.github/workflows/: codeql.yml
js/src/: index.ts
python/: README.md  pyproject.toml  requirements.txt
python/.github/workflows/: ci.yml
python/bharataddress_client/: __init__.py  api.py  models.py
python/tests/: conftest.py  test_models.py
